<resources>
    <string name="app_name">ProjectCuoiKyEommerce</string>
    <string name="name_app">Open fashion</string>
    <string name="title">Sign in</string>
    <string name="hello_blank_fragment">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account">Don’t have an account? Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_create_account">Create Account</string>
    <string name="dic_signup">Already a account? Log in</string>
    <string name="prompt_name">Name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="content_1">
        1. ĐĂNG KÝ TÀI KHOẢN\nTrong trường hợp Quý khách đăng kí tài khoản với website để tiện đặt hàng &amp; theo dõi thông tin, Quý khách có trách nhiệm với mật khẩu, tài khoản và hoạt động của mình trên web. Ngoài ra, Quý khách cần thông báo cho Seven.AM biết khi tài khoản bị truy cập trái phép. Seven.AM không chịu bất kỳ trách nhiệm nào, dù trực tiếp hay gián tiếp, đối với những thiệt hại hoặc mất mát gây ra nếu Quý khách không tuân thủ quy định. Vui lòng không sử dụng bất kỳ phần nào của trang web này với mục đích thương mại hoặc nhân danh bất kỳ đối tác thứ ba nào nếu không được Seven.AM cho phép bằng văn bản. Nếu vi phạm các điều khoản tại đây, Seven.AM sẽ hủy tài khoản của Quý khách mà không cần báo trước. Khi đăng ký trên website, Quý khách đã chọn đồng ý nhận email quảng cáo từ website. Nếu không muốn tiếp tục nhận email, Quý khách có thể từ chối bằng cách thực hiện theo hướng dẫn của Seven.AM trong mỗi email.
        \n2. HỦY BỎ ĐƠN HÀNG\nTrường hợp Quý khách muốn hủy bỏ đơn hàng đã thực hiện trên website, xin vui lòng liên hệ số Hotline: 092.405.8888 để yêu cầu hủy đơn hàng hoặc từ chối nhận hàng trong trường hợp đơn hàng của Quý khách đang được vận chuyển.
        \n3. QUYỀN SỞ HỮU TRÍ TUỆ\nMọi quyền sở hữu trí tuệ (đã đăng ký hoặc chưa đăng ký), nội dung thông tin và tất cả các thiết kế, văn bản, đồ họa, phần mềm, hình ảnh, video, âm nhạc, âm thanh, biên dịch phần mềm, mã nguồn và phần mềm cơ bản trên website đều là tài sản của Seven.AM. Toàn bộ nội dung của trang web được bảo vệ bởi luật bản quyền của Việt Nam và các công ước quốc tế. Bản quyền đã được bảo lưu. Mọi thông tin giao dịch sẽ được bảo mật ngoại trừ trong trường hợp cơ quan pháp luật yêu cầu.
        \n4. GIẢI QUYẾT TRANH CHẤP\nNếu có tranh cãi, khiếu nại hoặc tranh chấp phát sinh từ hoặc liên quan đến giao dịch tại website hoặc liên quan các quy định và điều kiện này, Seven.AM mong muốn được giải quyết bằng hình thức thương lượng, hòa giải. Trong trường hợp không thể thương lượng, Seven.AM tôn trọng quyết định của khách hàng và khiếu nại sẽ được giải quyết theo pháp luật Việt Nam.
    </string>
    <string name="content_2">
1. SHIP COD TẠI NHÀ:\n
Ship COD tại nhà là hình thức khách hàng thanh toán khi nhận hàng. Với hình thức thanh toán qua ship COD tại nhà, Quý khách vui lòng thanh toán đơn hàng và chi phí ship theo quy định của công ty cho bên giao vận.
\n2. THANH TOÁN CHUYỂN KHOẢN TRƯỚC:\n
Với thanh toán chuyển khoản trước, Quý khách vui lòng chọn một trong số các tài khoản sau đây: Chủ tài khoản: Công ty cổ phần HBD TK số 1251 000 2000 500 - BIDV chi nhánh Đông Đô TK số 116002 808 980 - Vietinbank chi nhánh Đống Đa TK số 101 501 5326 - Vietcombank chi nhánh Hà Nội Nội dung chuyển khoản: Tên người chuyển khoản + số điện thoại + mã đơn hàng hoặc mã sản phẩm. Ngay sau khi nhận được tiền chuyển vào tài khoản, Seven.AM sẽ tiến hành lập đơn hàng và giao hàng ngay cho Quý khách. Lưu ý: Với cả hai hình thức thanh toán, Seven.AM sẽ liên hệ với Quý khách qua email &amp; điện thoại để xác nhận về đơn hàng &amp; số tiền Quý khách cần thanh toán. Nếu Quý khách chưa nhận được thông tin xác nhận, vui lòng liên hệ lại với Seven.AM &amp; không thực hiện thanh toán trước khi nhận được xác nhận đơn hàng. Khi mua sắm trên website, nếu còn bất kì câu hỏi nào về đơn hàng, hướng dẫn thanh toán, giao hàng, xin Quý khách vui lòng liên hệ với Seven.AM qua hotline: 092.405.8888 Trân trọng cám ơn!
    </string>
    <string name="content_3">
1. HÌNH THỨC MUA HÀNG TRỰC TUYẾN\n
Chọn kích cỡ, màu sắc, số lượng sản phẩm rồi click vào nút “Mua hàng ngay” để đưa sản phẩm vào giỏ hàng của mình. - Để lựa chọn thêm sản phẩm khác, vui lòng click vào nút “Tiếp tục mua hàng”. Nếu không, Quý khách vui lòng click vào nút “Gửi đơn hàng” để tiếp tục quy trình mua hàng và thanh toán.
\nXem thêm: Phương thức thanh toán

\n2. HÌNH THỨC MUA HÀNG QUA ĐIỆN THOẠI\n
Chọn kích cỡ, màu sắc, số lượng sản phẩm, sau đó gọi hoặc gửi tin nhắn cho Seven.AM vào số hotline: 092.405.8888 để đặt hàng, nhân viên của Seven.AM sẽ liên hệ lại để xác nhận thông tin sản phẩm của và hướng dẫn Quý khách chuyển khoản thanh toán. (*) Nếu chọn hình thức mua hàng qua điện thoại, Quý khách vui lòng bỏ qua bước "Gửi đơn hàng"
    </string>
    <string name="content_4">
1. CHÍNH SÁCH ĐỔI TRẢ SẢN PHẨM\n
Áp dụng đổi – trả các sản phẩm nguyên giá và sản phẩm giảm giá dưới 50% trong thời gian 30 ngày kể từ ngày mua hàng. Áp dụng đổi trả đối với sản phẩm lỗi do nhà sản xuất, hoặc sản phẩm khách hàng mua đi tặng được ghi chú trên hóa đơn ngay khi mua hàng
\nSản phẩm đổi trả phải còn nguyên tem, nhãn mác, chưa qua sử dụng, không có mùi hóa chất, mùi cơ thể và có hóa đơn mua hàng kèm theo.
\nSản phẩm đổi phải bằng hoặc cao hơn giá trị sản phẩm tại thời điểm thanh toán trước đó. Trong trường hợp khách hàng chọn sản phẩm đổi có giá trị thấp hơn - số tiền còn lại sẽ không được hoàn trả.
\nĐịa điểm đổi sản phẩm: Toàn bộ các showroom trực thuộc trên toàn hệ thống Seven.AM
\n2. CÁC TRƯỜNG HỢP KHÔNG ÁP DỤNG CHÍNH SÁCH ĐỔI TRẢ\n
Sản phẩm mua quá thời gian 30 ngày và mua trong chương trình khuyến mại giảm giá từ 50% trở lên
\nSản phẩm phụ kiện: Áo lót, quần lót, áo nửa người, áo quây, quần tất, quần gen..
\nSản phẩm đã bị thay đổi thiết kế so với thiết kế ban đầu.
\nMỌI Ý KIẾN ĐÓNG GÓP HOẶC CẦN HỖ TRỢ KHIẾU NẠI, QUÝ KHÁCH VUI LÒNG LIÊN HỆ HOTLINE: 1900 633 694
    </string>
    <string name="content_5">
1. CHÍNH SÁCH THỬ SẢN PHẨM\n
Chỉ áp dụng thử đối với sản phẩm may mặc và sản phẩm phụ kiện như: áo nửa người, áo chống nắng, giầy, guốc, sandal. Quý khách vui lòng không thử sản phẩm phụ kiện mặc bên trong: áo lót/quần lót/quần tất/áo quây/quần mặc trong váy.
\nKhi thử sản phẩm, Quý khách vui lòng giữ nguyên trạng sản phẩm, không làm mất tem, mác gắn liền với sản phẩm, các chi tiết trang trí sản phẩm hoặc phụ kiện đi kèm.
\nQuý khách nên yêu cầu sự hỗ trợ từ nhân viên bán hàng khi thử đồ: lấy sản phẩm thử, kéo khóa sản phẩm.
\n2. CHÍNH SÁCH BẢO HÀNH SẢN PHẨM\n
Nhận sửa chữa miễn phí các trường hợp: cắt gấu, lên gấu, bóp nới sản phẩm, thay khóa, may đường chỉ.
\nKhông bảo hành phần phụ kiện trang trí đính kèm sản phẩm (đá, cườm,...), chỉ hỗ trợ đính lại khi phụ kiện bị rơi.
\nNhận sửa chữa có phí các trường hợp: thay thân, thay vải, may hoặc sửa phức tạp không phải do lỗi nhà sản xuất.
\nKhông nhận sửa chữa, bảo hành những lỗi không phải do nhà sản xuất của sản phẩm phụ kiện: Áo nửa người/áo lót/quần lót/quần tất/áo quây/quần mặc trong váy, túi xách, ví, giày dép, vòng cổ, khuyên tai,...
\n3. CÁC TRƯỜNG HỢP KHÔNG ÁP DỤNG CHÍNH SÁCH BẢO HÀNH, ĐỔI TRẢ\n
\nSản phẩm mua quá thời gian 30 ngày và mua trong chương trình khuyến mại giảm giá từ 50% trở lên
\nSản phẩm phụ kiện: Áo lót, quần lót, áo nửa người, áo quây, quần tất, quần gen..
\nSản phẩm đã bị thay đổi thiết kế so với thiết kế ban đầu.
\nMỌI Ý KIẾN ĐÓNG GÓP HOẶC CẦN HỖ TRỢ KHIẾU NẠI, QUÝ KHÁCH VUI LÒNG LIÊN HỆ HOTLINE: 1900 633 694
    </string>
</resources>